# UIA_language

./: LICENSE  Readme.md  changeEverythingToUIA.cpp  changeEverythingToUIA_old.cpp  char_def.h  genUia.cpp  helloworld.cpp  helloworld.uia  note_setup.md  setup_path.bat  setup_path.ps1  test co cach.uia  test_xu_ly_con_so.uia  test_xu_ly_dau_nhay_kep.uia  uia.cpp  uia.h  uia.txt  uia.uia  uia_include.h  uia_uia.cpp  uia_uia.uia
UiaCompiler/: CMakeLists.txt  changeEverythingToUIA.cpp  uia_char_def.h  uia_compiler.cpp  uia_library.h  uia_main.cpp  uia_preprocessor.cpp  uia_run.cpp
